--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,8 @@
     "allowJs": true,
     "types": [
       "bun-types" // add Bun global
-    ]
+    ],
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
   }
 }
