--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "discord.js": "^14.13.0",
+    "linkifyjs": "^4.1.1",
     "toml": "^3.0.0",
     "zod": "^3.22.4"
   }
