--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 on:
   push:
-    branches: [ "*" ]
+    branches: ["*"]
 jobs:
   test:
     name: "test the thing"
@@ -8,6 +8,8 @@ jobs:
     steps:
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
+      - name: Setup yt-dlp
+        uses: AnimMouse/setup-yt-dlp@v1
       - id: checkout
         name: Checkout
         uses: actions/checkout@v3
@@ -25,4 +27,3 @@ jobs:
   #       uses: oven-sh/setup-bun@v1
   #     - name: do it
   #       run: bun build main.ts
-        
