chore: fix tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: install deps
         run: bun install
       - name: do it
-        run: bun test
+        run: npm run test
   # build:
   #   name: "Build the thing"
   #   runs-on: ubuntu-latest
